# rx

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
cmake/: GetGitDep.cmake
examples/: CMakeLists.txt  test_rx.cpp
rx/: CMakeLists.txt
rx/include/rx/: cancellable.h  disposable.h  emitter.h  grouped_observable.h  leak_observer.h  observable.h  observable_source.h  observer.h  rx.h  scheduler.h  schedulers.h
rx/include/rx/disposables/: atomic_disposable.h  disposable_helper.h  sequential_disposable.h
rx/include/rx/observers/: blocking_first_observer.h  blocking_for_each_observer.h  blocking_last_observer.h
rx/include/rx/operators/: observable_all.h  observable_amb.h  observable_any.h  observable_buffer.h  observable_combine_latest.h  observable_concat_map.h  observable_create.h  observable_debounce.h  observable_default_if_empty.h  observable_defer.h  observable_delay.h  observable_distinct.h  observable_distinct_until_changed.h  observable_do_on_each.h  observable_element_at.h  observable_empty.h  observable_error.h  observable_filter.h  observable_flat_map.h  observable_from_array.h  observable_group_by.h  observable_ignore_elements.h  observable_interval.h  observable_join.h  observable_just.h  observable_last.h  observable_map.h  observable_never.h  observable_observe_on.h  observable_on_error_resume_next.h  observable_on_error_return.h  observable_range.h  observable_reduce.h  observable_repeat.h  observable_retry.h  observable_sample.h  observable_scan.h  observable_sequence_equal.h  observable_skip.h  observable_skip_last.h  (+13 more)
rx/include/rx/schedulers/: job_system_scheduler.h  job_system_worker.h  main_thread_scheduler.h  new_thread_scheduler.h  new_thread_worker.h  scheduled_direct_task.h  scheduled_direct_timer.h  task_system_scheduler.h  task_system_worker.h  timer_scheduler.h  timer_worker.h
rx/include/rx/sources/: observable_create.h
rx/src/: observable.cpp  rx.cpp
